--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css" />
-<html class="html" lang="en">
+<html class="html" lang="fr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
